cabal-version: 2.2
name:          confusing
version:       0.1
synopsis:      Fuse VL lens and traversals
description:
  A package providing
  .
  @
  fusing    :: Functor f     => LensLike (... f) s t a b -> LensLike f s t a b
  confusing :: Applicative f => LensLike (... f) s t a b -> LensLike f s t a b
  @

homepage:      https://github.com/phadej/confusing
license:       BSD-3-Clause
license-file:  LICENSE
author:        Edward Kmett, Csongor Kiss, Oleg Grenrus
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:     Copyright (c) 2019 Edward Kmett, 2019 Oleg Grenrus
category:      Data Structures
build-type:    Simple
tested-with:
  GHC ==7.6.3
   || ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.3

source-repository head
  type:     git
  location: https://github.com/phadej/confusing
  subdir:   hkd

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  exposed-modules:  Data.Functor.Confusing

  if impl(ghc >=8.4)
    ghc-options:
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -Wmissing-export-lists

  build-depends:    base >=4.6 && <4.15
